--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
         with:
           pandoc-version: "2.9.2"
       - name: Install tox
-        run: python -m pip install -U pip tox
+        run: python -m pip install -U pip tox coverage
       - name: Info
         run: |
           echo "=====  PYTHON  ====="
@@ -47,6 +47,11 @@ jobs:
           pandoc --version | head -2
       - name: Run tests
         run: tox -e py${{ matrix.python }}
+      - name: Generate summary
+        if: startsWith(runner.os, 'Linux') && matrix.python=='3.12'
+        run: |
+          echo "# Coverage report" >> $GITHUB_STEP_SUMMARY
+          coverage report --format=markdown >> $GITHUB_STEP_SUMMARY
 
   lint:
     name: Lint
